.toList com o java 17